# dod13-client

./: .gitmodules  CMakeLists.txt  README.md  wscript
cl_dll/: CClientEnvModel.cpp  CMakeLists.txt  DMC_BSPFile.h  DOD_Camera.h  DOD_camera.cpp  Exports.h  ParticleShooter.cpp  StudioModelRenderer.h  ammo.cpp  ammo.h  ammohistory.h  cl_util.h  com_weapons.h  compile.bat  death.cpp  dod_common.cpp  dod_crosshair.cpp  dod_fog.cpp  dod_icons.cpp  dod_map.cpp  dod_objectives.cpp  dod_shared.h  ev_common.cpp  ev_dod.cpp  ev_hldm.cpp  ev_hldm.h  eventscripts.h  hud.cpp  hud.h  hud_iface.h  hud_msg.cpp  hud_redraw.cpp  hud_spectator.cpp  hud_spectator.h  hud_update.cpp  input.cpp  menu.cpp  message.cpp  mortarhud.cpp  mortarhud.h  (+11 more)
cl_dll/dod/: dod_weapons.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
common/: entity_state.h  weaponinfo.h
dlls/: CMakeLists.txt  activity.h  cbase.h  cdll_dll.h  dod_gamerules.h  dod_shared.cpp  gamerules.h  hintmessage.h  player.h  schedule.h  skill.h  soundent.h  unisignals.h  util.h  weapons.h
dlls/wpn_shared/: 30cal.cpp  amer_knife.cpp  bar.cpp  bazooka.cpp  bipod.cpp  bren.cpp  colt.cpp  enfield.cpp  fg42.cpp  garand.cpp  ger_knife.cpp  greasegun.cpp  handgrenade.cpp  handgrenade_ex.cpp  k43.cpp  kar.cpp  knife.cpp  luger.cpp  m1carbine.cpp  mg34.cpp  mg42.cpp  mp40.cpp  mp44.cpp  piat.cpp  pistol.cpp  pschreck.cpp  scoped98k.cpp  spade.cpp  spring.cpp  sten.cpp  thompson.cpp  webley.cpp
engine/: APIProxy.h  progdefs.h
game_shared/: bitvec.h  shared_util.h  voice_banmgr.h  voice_common.h  voice_status.h  voice_status_hud.h
pm_shared/: pm_defs.h
